# AIaW

./: .env  .env.app  .env.docker  .eslintignore  .eslintrc.cjs  .gitignore  .npmrc  Dockerfile  LICENSE  README.md  README.zh-CN.md  capacitor.config.ts  dexie-cloud.json  index.html  package.json  pnpm-lock.yaml  quasar.config.js  tsconfig.json  uno.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-capacitor.yml  build-tauri-debug.yml  build-tauri.yml  docker-image.yml
android/: .gitignore  build.gradle  capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
capacitor-http-stream/: package.json
docs/: index.md
docs/.vitepress/: config.ts
docs/privacy-policy/: index.md
docs/self-host/: advanced.md  index.md
docs/usage/: artifacts.md  assistants.md  common-issues.md  cross-platform.md  custom-provider.md  data-sync.md  file-parse.md  index.md  mcp.md  model-service.md  multimodal.md  personalization.md  plugin-dev.md  plugins.md  prompt-vars.md  share-link.md  usage-tips.md  workspaces.md
docs/zh/: index.md
public/: assistants.json  plugins.json
public/ai-avatars/: 33.avif
public/json/: assistants.en-US.json  assistants.zh-CN.json  assistants.zh-TW.json  (+3 more)
scripts/: sync-version.js
src/: App.vue  version.json
src-backend/: app.py  requirements.txt
src-pwa/: manifest.json  register-service-worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: is_deb.rs  lib.rs  main.rs  stream.rs
(+219 files in other folders)
